# MayaPlugin

./: CMakeLists.txt
modules/: FindMayaQt.cmake  maya_moc.cmake
